--- a/sdk/communication/azure-communication-rooms/tests.yml
+++ b/sdk/communication/azure-communication-rooms/tests.yml
@@ -1,20 +1,7 @@
 trigger: none
 
-extends:
-  template: /sdk/communication/communication-tests-template.yml
-  parameters:
-    PackageName: azure-communication-rooms
-    SafeName: azurecommunicationrooms
-    CloudConfig:
-      Public:
-        SubscriptionConfigurations:
-          - $(sub-config-azure-cloud-test-resources)
-          - $(sub-config-communication-services-cloud-test-resources-common)
-          - $(sub-config-communication-services-cloud-test-resources-java)
-      PPE:
-        SubscriptionConfigurations:
-          - $(sub-config-communication-ppe-test-resources-common)
-          - $(sub-config-communication-ppe-test-resources-java)
-    Clouds: Public,PPE
-    TestResourceDirectories:
-      - communication/test-resources/
+stages:
+  - template: /sdk/communication/communication-tests-template.yml
+    parameters:
+      PackageName: azure-communication-rooms
+      SafeName: azurecommunicationrooms
