--- a/sdk/identity/azure-identity-extensions/pom.xml
+++ b/sdk/identity/azure-identity-extensions/pom.xml
@@ -6,12 +6,12 @@
     <groupId>com.azure</groupId>
     <artifactId>azure-client-sdk-parent</artifactId>
     <version>1.7.0</version> <!-- {x-version-update;com.azure:azure-client-sdk-parent;current} -->
-    <relativePath>../../parents/azure-client-sdk-parent</relativePath>
+    <relativePath>../../parents/azure-client-sdk-parent/pom.xml</relativePath>
   </parent>
 
   <groupId>com.azure</groupId>
   <artifactId>azure-identity-extensions</artifactId>
-  <version>1.2.0-beta.2</version> <!-- {x-version-update;com.azure:azure-identity-extensions;current} -->
+  <version>1.1.13</version> <!-- {x-version-update;com.azure:azure-identity-extensions;current} -->
   <packaging>jar</packaging>
 
   <name>Azure Identity Extensions</name>
@@ -28,13 +28,13 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.3.9</version> <!-- {x-version-update;org.postgresql:postgresql;external_dependency} -->
+      <version>42.3.8</version> <!-- {x-version-update;org.postgresql:postgresql;external_dependency} -->
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
-      <version>1.11.4</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+      <version>1.11.2</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
     </dependency>
 
     <!-- test   -->
@@ -92,7 +92,7 @@
             <bannedDependencies>
               <includes>
                 <include>com.mysql:mysql-connector-j:[8.0.33]</include> <!-- {x-include-update;com.mysql:mysql-connector-j;external_dependency} -->
-                <include>org.postgresql:postgresql:[42.3.9]</include> <!-- {x-include-update;org.postgresql:postgresql;external_dependency} -->
+                <include>org.postgresql:postgresql:[42.3.8]</include> <!-- {x-include-update;org.postgresql:postgresql;external_dependency} -->
               </includes>
             </bannedDependencies>
           </rules>
@@ -101,7 +101,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version><!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
+        <version>3.1.0</version><!-- {x-version-update;org.apache.maven.plugins:maven-surefire-plugin;external_dependency} -->
         <configuration>
           <reuseForks>false</reuseForks>
         </configuration>
