--- a/sdk/communication/azure-communication-chat/tests.yml
+++ b/sdk/communication/azure-communication-chat/tests.yml
@@ -1,7 +1,7 @@
 trigger: none
 
-extends:
-  template: /sdk/communication/communication-tests-template.yml
-  parameters:
-    PackageName: azure-communication-chat
-    SafeName: azurecommunicationchat
+stages:
+  - template: /sdk/communication/communication-tests-template.yml
+    parameters:
+      PackageName: azure-communication-chat
+      SafeName: azurecommunicationchat
