[ERROR] [Invalid Argument] SuppressionsPath: Invalid file path list. PowerArgs.ValidationArgException: File not found - D:\a\_work\1\azure-sdk-build-tools\eng\CredScanSuppression.csk  ---> System.IO.FileNotFoundException: Unable to find the specified file.

--- a/eng/pipelines/templates/stages/archetype-java-release-patch.yml
+++ b/eng/pipelines/templates/stages/archetype-java-release-patch.yml
@@ -127,6 +127,7 @@ stages:
                         - Name: Azure/azure-sdk-for-java
                           Commitish: $(Build.SourceVersion)
                           WorkingDirectory: $(Pipeline.Workspace)/azure-sdk-for-java
+                  - template: /eng/pipelines/templates/steps/download-credscan-suppressions.yml
                   - download: current
                     displayName: 'Download Artifacts'
                     artifact: ${{parameters.ArtifactName}}-signed
